Don't rely on path for starting demo mode.

Instead of calling the kphotoalbum executable that is found using PATH,
try to call the actual executable file when starting demo mode via the
help menu.

BUG: 407164