MainWindow/Window.cpp
@@ -1043,7 +1043,7 @@ void MainWindow::Window::showTipOfDay()
 void MainWindow::Window::runDemo()
 {
     KProcess* process = new KProcess;
-    *process << QLatin1String("kphotoalbum") << QLatin1String("--demo");
+    *process << qApp->applicationFilePath() << QLatin1String("--demo");
     process->startDetached();
 }
 
